# KungFoo-legacy

./: .travis.yml  License.txt  README.md
src/: .cproject  .project  CMakeLists.txt  CMake_Defaults.txt  valgrindCheck.sh
src/DescentEngine/: .cproject  .project  CMakeLists.txt
src/DescentEngine/src/: Cpp11.h  GameLoop.cpp  GameLoop.h  JavaInterface.h  Log.h  OpenGLInclude.h  RandomEngine.h  RenderEngine.h  Signals.h  Texture.h  Timing.h  Util.h  VectorTypes.h
src/DescentEngine/src/AnimationEngine/: AnimationEngine.cpp  AnimationEngine.h  EntityAnimation.h  ParticleAnimation.cpp  ParticleAnimation.h  TextAnimation.cpp  TextAnimation.h
src/DescentEngine/src/CinematicEngine/: CinematicEngine.cpp  CinematicEngine.h
src/DescentEngine/src/Common_OpenGL/: GLSupport.h  OpenGL_ES_Render.cpp  OpenGL_ES_Render.h
src/DescentEngine/src/DataTypes/: FloatChar.h  RingBuffer.h  StaticVector.h
src/DescentEngine/src/EntityEngine/: Entity.cpp  Entity.h  EntityEngine.cpp  EntityEngine.h  EntityFactory.h  EntityList.h  EntityTemplate.cpp  EntityTemplate.h  MultiVisualEntity.h
src/DescentEngine/src/Input/: AndroidInput.cpp  InputContainer.h  InputSystemBase.h  SDLInput.h
src/DescentEngine/src/Performance/: BranchPredict.h  SectionTimer.cpp  SectionTimer.h
src/DescentEngine/src/Physics/: CollisionGroups.h  CollisionType.h  EntityRigidBodyState.cpp  EntityRigidBodyState.h  PhysicsEngine.cpp  PhysicsEngine.h
src/DescentEngine/src/ResourceEngine/: ResourceEngine.cpp  ResourceEngine.h  ResourceEngineAndroid.cpp  ResourceEngineAndroid.h  ResourceEngineSDL.cpp
src/DescentEngine/src/SDL_OpenGL/: SDLOpenGLInterface.cpp  SDLOpenGLInterface.h
src/DescentEngine/src/ScriptEngine/: ScriptEngine.cpp  ScriptEngine.h
src/DescentEngine/src/SoundEngine/: SoundEngineSDL.cpp  SoundPtr.h
src/DescentEngine/src/StateEngine/: StateTransitions.h
src/DescentEngine/src/Threading/: ConcurrentStack.h  PortableMutex.h  PortableThread.h
src/DescentEngine/src/Visuals/: LayerPriority.h  ParticleSystemVisualList.h  ScreenTransform.h  SpriteVisual.cpp  SpriteVisual.h  TextSupport.h  TextVisual.h  TextVisualList.h  VisualBase.h
src/DescentGame/: .cproject  .project  CMakeLists.txt
src/DescentGame/src/: Main.cpp  WinMain.cpp
src/DescentLogic/: CMakeLists.txt
src/DescentLogic/src/: DescentFramework.h  LevelFactory.cpp  LevelFactory.h
src/DescentLogic/src/Cinematics/: IntroCinematic.h
src/DescentLogic/src/Common/Aspects/: DebugFunctionAspect.h  QuitAspect.h  ScriptAspect.h
src/DescentLogic/src/Config/: EnemyBehaviour.h  GameMovement.h  GameRules.h  PlayerMovement.h
src/DescentLogic/src/Entities/: BloodEntity.h  CollisionEntity.h  EnemyEntity.h  FighterEntity.cpp  FighterEntity.h  GameCollisionGroups.h  GameTemplates.cpp  GameTemplates.h
src/DescentLogic/src/Game/: GameState.cpp  GameState.h
src/DescentLogic/src/Game/Aspects/: AttackAspect.cpp  ComboDetectionAspect.cpp  ComboDetectionAspect.h  DebugVisualCollisionsAspect.h  DieAspect.cpp  DieAspect.h  EnemyAIAspect.cpp  ExecuteMoveIntentsAspect.cpp  ForwardScrollingAspect.cpp  FreeScrollingAspect.cpp  InputTranslationAspect.h  LevelEditorAspect.cpp  MovePlayerAspect.cpp  MovePlayerAspect.h  RemoveEntitiesAspect.cpp  ScoringAspect.cpp  SpecialMoveDetectionAspect.cpp  SpecialMoveDetectionAspect.h  StartGameAspect.cpp  StatusAspect.cpp
src/DescentLogic/src/Game/Aspects/SpecialMoves/: Deactivator.h  InputItem.h  PatternNodes.h
src/DescentLogic/src/Game/Util/: SafePlacement.h
src/DescentLogic/src/Intro/Aspects/: AdvanceIntroAspect.cpp  InputIntroAspect.h
src/DescentLogic/src/Menu/: MenuState.cpp  MenuState.h
src/DescentLogic/src/Menu/Aspects/: InputMenuAspect.h  NavigateMenuAspect.cpp  NavigateMenuAspect.h  StartMenuAspect.cpp
src/DescentTest/: CMakeLists.txt
src/DescentTest/src/DescentEngine/: EntityEngineTest.hpp  FloatCharTest.cpp  PhysicsTest.cpp  StaticVectorTest.cpp
src/DescentTest/src/DescentEngine/Support/: TestEntity.h  TestEntityFactory.h
src/EngineBench/: CMakeLists.txt
src/EngineBench/src/: RenderEngineBench.cpp  RenderEngineBenckmark.h
src/Tests/: classSize.cpp
